-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.3
-
a350af2eb675b8a9fd1489437b3c465b6fa51701 (qt/qtdeclarative/dev)
Issue case:
test.qml
import QtQuick ListModel { id: listModel property var test: UnknownType { property int test2: Unknown.value; } }
$ qtbase/bin/qmllint qmllint-issue/test.qml Warning: qmllint-issue/test.qml: UnknownType was not found. Did you add all import paths? ASSERT: "!m_currentScope->baseType().isNull()" in file /home/noelma/work/qt-git/qtdeclarative/src/qmlcompiler/qqmljstypepropagator.cpp, line 276 Aborted (core dumped)
Other cases for reference (no crashes):
test2.qml
import QtQuick Item { ListModel { id: listModel } property var test: UnknownType { property int test2: Unknown.value; } }
$ qtbase/bin/qmllint qmllint-issue/test2.qml Warning: qmllint-issue/test2.qml: UnknownType was not found. Did you add all import paths? Warning: qmllint-issue/test2.qml:9:29: Unqualified access property int test2: Unknown.value; ^^^^^^^
test3.qml
import QtQuick Item { id: item property var test: UnknownType { property int test2: Unknown.value; } }
$ qtbase/bin/qmllint qmllint-issue/test3.qml Warning: qmllint-issue/test3.qml: UnknownType was not found. Did you add all import paths? Warning: qmllint-issue/test3.qml:7:29: Unqualified access property int test2: Unknown.value; ^^^^^^^
| For Gerrit Dashboard: QTBUG-99027 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 385282,4 | qqmljstypepropagator: Do not assert on baseType being non-zero | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 385718,5 | qqmljstypepropagator: Use variant type for arguments of unknown type | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 386191,2 | qqmljstypepropagator: Use variant type for arguments of unknown type | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |