qqmljstypepropagator: Do not assert on baseType being non-zero

Fixes: QTBUG-99027
Change-Id: Ia1fd9a14f5d45d9a63b630b471bdad1b9c4c273d
Reviewed-by: Andrei Golubev <andrei.golubev@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Jaeyoon Jung <jaeyoon.jung@lge.com>