tests/auto/qml/qmllint/data/unknownTypeCustomParser.qml
@@ -1,0 +1,7 @@
+import QtQuick
+
+ListModel {
+    property var x: TypeDoesNotExist {
+        property string s: DoesNotExistEither.value;
+    }
+}
